src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphore_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphore_StringErrorContext.class */
public final class NVTimelineSemaphore_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglCreateSemaphoresNV(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphoreErrorContext");
        methods.put("glCreateSemaphoresNV(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphoreErrorContext");
        methods.put("glCreateSemaphoresNV()I", "net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphoreErrorContext");
        methods.put("nglSemaphoreParameterivNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphoreErrorContext");
        methods.put("glSemaphoreParameterivNV(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphoreErrorContext");
        methods.put("nglGetSemaphoreParameterivNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphoreErrorContext");
        methods.put("glGetSemaphoreParameterivNV(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphoreErrorContext");
        methods.put("glCreateSemaphoresNV([I)V", "net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphoreErrorContext");
        methods.put("glSemaphoreParameterivNV(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphoreErrorContext");
        methods.put("glGetSemaphoreParameterivNV(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVTimelineSemaphoreErrorContext");
        return methods;
    }
}
